[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["vsm"]  # package names should match these glob patterns (["*"] by default)
exclude = ["images"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "vsm"
version = "0.0.1"
authors = [
  { name="Coargus Engineering", email="admin@coargus.com" },
]
description = "Video State Machine (VSM)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sympy==1.12"
    "cog_cv_abstraction@git+https://github.com/Coargus/computer-vision-model-abstraction.git@v0.0.4-dev",
]

[project.urls]
"Homepage" = "https://github.com/Coargus/template-python-package"
"Bug Tracker" = "https://github.com/Coargus/template-python-package/issues"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]
test = ["pytest", "pytest-cov", "pytest-mock"]